--- a/analysis-complete-case/exploratory-analysis-block-level-nicotine-use.Rmd
+++ b/analysis-complete-case/exploratory-analysis-block-level-nicotine-use.Rmd
@@ -17,7 +17,6 @@ output:
 }
 </style>
 ```
-
 ```{r global_options, include=FALSE}
 knitr::opts_chunk$set(tidy = TRUE)
 knitr::opts_chunk$set(fig.pos = 'H')
@@ -54,9 +53,11 @@ dat_primary_aim <- readRDS(file = file.path(path_manipulated_data, "dat_primary_
 ```{r}
 dat_for_analysis <- dat_primary_aim %>%
   select(participant_id, cluster_id, decision_point, days_between_v1_and_coinflip_local,
-         Y, substance_is_any_nicotine, eligibility, coinflip, is_high_effort, is_low_effort) %>% 
-  mutate(coinflip = replace(coinflip, eligibility == 0, 0),
-         is_high_effort = replace(is_high_effort, eligibility == 0, 0)) %>% 
+         Y, substance_is_any_nicotine, eligibility, coinflip, is_high_effort, is_low_effort,
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
+         baseline_tobacco_history, has_partner, income_val) %>% 
+  mutate(coinflip = replace(coinflip, eligibility == 0, 0)) %>% 
+  mutate(any_prompt = 1*(coinflip == 1)) %>%
   group_by(participant_id) %>% 
   mutate(substance_is_any_nicotine_lead1 = lead(substance_is_any_nicotine),
          eligibility_lead1 = lead(eligibility)) %>%
@@ -64,23 +65,77 @@ dat_for_analysis <- dat_primary_aim %>%
   filter((decision_point >= 7) & (decision_point <= 54))
 ```
 
-
-# Marginal association between engagement in self-regulatory strategies and nicotine use on current person-block
+# Association between engagement in self-regulatory strategies and nicotine use on current person-block
 
 $$
-\mathrm{logit} Pr \left( S_{i,j} = 1 \Big| I_{i, j} = 1 \right) = \beta_0 + \beta_1 X_{i,j}
+\mathrm{logit} Pr \left( \text{ANY NICOTINE USE}_{i,j} = 1 \Big| I_{i, j} = 1 , \text{control covariates}, \text{WHETHER ENGAGED}_{i,j} \right) = \beta_0 + \text{c_age}\beta_1 + \text{c_is_male}\beta_2 + \text{c_is_latino}\beta_3 + \text{c_is_not_latino_and_black}\beta_4 + \text{c_is_not_latino_and_other}\beta_5 + \text{c_baseline_tobacco_history}\beta_6 + \text{c_has_partner}\beta_7 + \text{c_income_val}\beta_8 + \text{c_any_prompt}_{i,j}\beta_9 + \text{WHETHER ENGAGED}_{i,j} \beta_{10}
 $$
 
 ```{r}
 dat_logreg <- dat_for_analysis %>% 
   filter(eligibility == 1) %>% 
-  select(participant_id, decision_point, substance_is_any_nicotine, Y) %>%
+  select(participant_id, decision_point, substance_is_any_nicotine, Y,
+         coinflip, any_prompt,
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
+         baseline_tobacco_history, has_partner, income_val) %>%
   mutate(drop_row = if_else(!complete.cases(.), 1, 0)) %>%
   filter(drop_row == 0)
 ```
 
 ```{r}
-fit <- geeglm(substance_is_any_nicotine ~ Y, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
+dat_tmp <- dat_logreg %>% 
+  select(participant_id,
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
+         baseline_tobacco_history, has_partner, income_val) %>%
+  unique(.)
+```
+
+```{r}
+dat_tmp_summary <- dat_tmp %>%
+  summarise(m_age = mean(age),
+            m_is_male = mean(is_male),
+            m_is_latino = mean(is_latino),
+            m_is_not_latino_and_black = mean(is_not_latino_and_black),
+            m_is_not_latino_and_other = mean(is_not_latino_and_other),
+            m_baseline_tobacco_history = mean(baseline_tobacco_history),
+            m_has_partner = mean(has_partner),
+            m_income_val = mean(income_val))
+```
+
+```{r}
+dat_logreg <- cbind(dat_logreg, dat_tmp_summary)
+```
+
+```{r}
+dat_tmp2 <- dat_logreg %>% 
+  select(participant_id, decision_point, any_prompt)
+```
+
+```{r}
+dat_tmp2_summary <- dat_tmp2 %>%
+  group_by(decision_point) %>%
+  summarise(m_any_prompt = mean(any_prompt))
+```
+
+```{r}
+dat_logreg <- left_join(x = dat_logreg, y = dat_tmp2_summary, by = join_by(decision_point == decision_point))
+```
+
+```{r}
+dat_logreg <- dat_logreg %>%
+  mutate(c_age = age - m_age,
+         c_is_male = is_male - m_is_male, 
+         c_is_latino = is_latino - m_is_latino, 
+         c_is_not_latino_and_black = is_not_latino_and_black - m_is_not_latino_and_black, 
+         c_is_not_latino_and_other = is_not_latino_and_other - m_is_not_latino_and_other, 
+         c_baseline_tobacco_history = baseline_tobacco_history - m_baseline_tobacco_history, 
+         c_has_partner = has_partner - m_has_partner, 
+         c_income_val = income_val - m_income_val) %>%
+  mutate(c_any_prompt = any_prompt - m_any_prompt)
+```
+
+```{r}
+fit <- geeglm(substance_is_any_nicotine ~ c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val + c_any_prompt + Y, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
 ```
 
 ```{r}
@@ -97,6 +152,49 @@ dat_results_logodds_scale %>% round(., 3)
 
 # Format output to 3 decimal places
 dat_results_logodds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Nicotine-Use", "block_level_log_odds_scale_concurrent.csv"), row.names = TRUE)
+```
+
+```{r}
+expit <- function(x){
+  exp(x)/(1+exp(x))
+}
+
+est_beta <- as.matrix(dat_results$Estimate)
+Lmat <- rbind(c(1, rep(0,10)),
+              c(1, rep(0,9), 1))
+Vmat <- vcov(fit)
+
+est_logodds_scale <- Lmat %*% est_beta
+std_err_logodds_scale <- sqrt(diag(Lmat %*% Vmat %*% t(Lmat)))
+
+LB95_logodds_scale <- est_logodds_scale - qnorm(0.975)*std_err_logodds_scale
+UB95_logodds_scale <- est_logodds_scale + qnorm(0.975)*std_err_logodds_scale
+
+LB90_logodds_scale <- est_logodds_scale - qnorm(0.95)*std_err_logodds_scale
+UB90_logodds_scale <- est_logodds_scale + qnorm(0.95)*std_err_logodds_scale
+
+est_probability_scale <- expit(Lmat %*% est_beta)
+
+LB95_probability_scale <- expit(LB95_logodds_scale)
+UB95_probability_scale <- expit(UB95_logodds_scale)
+
+LB90_probability_scale <- expit(LB90_logodds_scale)
+UB90_probability_scale <- expit(UB90_logodds_scale)
+
+dat_results_probability_scale <- data.frame(estimate = est_probability_scale,
+                                            # 95% CI
+                                            LB95 = LB95_probability_scale, 
+                                            UB95 = UB95_probability_scale,
+                                            # 90% CI
+                                            LB90 = LB90_probability_scale, 
+                                            UB90 = UB90_probability_scale)
+
+row.names(dat_results_probability_scale) <- c("probability of smoking at the mean of control covariates when did not engage", "probability of smoking at the mean of control covariates when engaged")
+
+dat_results_probability_scale  %>% round(., 3)
+
+# Format output to 3 decimal places
+dat_results_probability_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Nicotine-Use", "block_level_probability_scale_concurrent.csv"), row.names = TRUE)
 ```
 
 ```{r}
@@ -119,8 +217,10 @@ dat_results_odds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(.
 # Time-varying association between engagement in self-regulatory strategies and nicotine use on current person-block
 
 $$
-\text{logit} Pr\left(\text{ANY NICOTINE USE}_{i} \left(t_{i,j} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{WHETHER ENGAGED} \left(t_{i,j}\right)
+\text{logit} Pr\left(\text{ANY NICOTINE USE}_{i} \left(t_{i,j} \right) = 1\right) = \boldsymbol{Z}_c\boldsymbol{\alpha} + \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{c_ANY PROMPT} \left(t_{i,j}\right) + \beta_2 \left(t_{i,j}\right) \text{WHETHER ENGAGED} \left(t_{i,j}\right)
 $$
+where $\boldsymbol{Z}_c$ denotes centered baseline covariates.
+
 ```{r}
 dat_tvem <- dat_logreg
 ```
@@ -130,10 +230,10 @@ list_collect_metrics <- list()
 
 for(current_num_knots in 1:3){
   model_tvem <- tvem(data=dat_tvem,
-                     formula=substance_is_any_nicotine ~ Y,
+                     formula=substance_is_any_nicotine ~ c_any_prompt + Y,
                      id=participant_id,
                      time=decision_point,
-                     invar_effects=NULL,
+                     invar_effects=~ c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val,
                      family = binomial(),
                      num_knots = current_num_knots,
                      spline_order = 3,
@@ -150,10 +250,10 @@ for(current_num_knots in 1:3){
 dat_all_metrics <- bind_rows(list_collect_metrics)
 
 model_tvem <- tvem(data=dat_tvem,
-                   formula=substance_is_any_nicotine ~ Y,
+                   formula=substance_is_any_nicotine ~ c_any_prompt + Y,
                    id=participant_id,
                    time=decision_point,
-                   invar_effects=NULL,
+                   invar_effects=~ c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val,
                    family = binomial(),
                    num_knots = dat_all_metrics[which.min(dat_all_metrics$bic_value),"total_knots"],
                    spline_order = 3,
@@ -163,6 +263,7 @@ model_tvem <- tvem(data=dat_tvem,
 
 ```{r}
 plot(model_tvem)
+
 plot(model_tvem, exponentiate = TRUE)
 ```
 
@@ -181,14 +282,14 @@ dat_fitted_tvem[["LB90"]] <- model_tvem$grid_fitted_coefficients$Y$estimate - qn
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab(expression(widehat(beta)[NU][paste(",")][1]*"(j)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.6))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))  
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Nicotine-Use", "tvem_block_level_logodds_scale_concurrent_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab(expression(widehat(beta)[NU][paste(",")][1]*"(j)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.6))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Nicotine-Use", "tvem_block_level_logodds_scale_concurrent_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
@@ -208,34 +309,91 @@ dat_fitted_tvem_exp_scale[["LB90"]] <- exp(dat_fitted_tvem[["LB90"]])
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab(expression("exp("*widehat(beta)[NU][paste(",")][1]*"(j))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 2))
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab("") + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(0, 2))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Nicotine-Use", "tvem_block_level_odds_scale_concurrent_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab(expression("exp("*widehat(beta)[NU][paste(",")][1]*"(j))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 2))
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab("") + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(0, 2))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Nicotine-Use", "tvem_block_level_odds_scale_concurrent_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
-# Marginal association between engagement in self-regulatory strategies and nicotine use on next person-block
+# Association between engagement in self-regulatory strategies and nicotine use on next person-block
 
 $$
-\mathrm{logit} Pr \left( S_{i,j + 1} = 1 \Big| \left\{I_{i, j} = 1\right\} \cap \left\{I_{i, j+1} = 1\right\} \right) = \beta_0 + \beta_1 S_{i, j} + \beta_2 \text{WHETHER ENGAGED}_{i,j} 
+\mathrm{logit} Pr \left( \text{ANY NICOTINE USE}_{i,j + 1} = 1 \Big| \left\{I_{i, j} = 1\right\} \cap \left\{I_{i, j+1} = 1\right\}, \text{control covariates}, \text{WHETHER ENGAGED}_{i,j} \right) = \beta_0 + \text{c_age}\beta_1 + \text{c_is_male}\beta_2 + \text{c_is_latino}\beta_3 + \text{c_is_not_latino_and_black}\beta_4 + \text{c_is_not_latino_and_other}\beta_5 + \text{c_baseline_tobacco_history}\beta_6 + \text{c_has_partner}\beta_7 + \text{c_income_val}\beta_8 + \text{c_any_prompt}_{i,j}\beta_9 + \text{ANY NICOTINE USE}_{i,j+1}\beta_{10} + \text{WHETHER ENGAGED}_{i,j} \beta_{11}
 $$
 
 ```{r}
 dat_logreg <- dat_for_analysis %>% 
   filter((eligibility == 1) & (eligibility_lead1 == 1)) %>% 
-  select(participant_id, decision_point, substance_is_any_nicotine_lead1, substance_is_any_nicotine, Y) %>%
+  select(participant_id, decision_point, substance_is_any_nicotine_lead1, substance_is_any_nicotine, Y,
+         coinflip, any_prompt,
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
+         baseline_tobacco_history, has_partner, income_val) %>%
   mutate(drop_row = if_else(!complete.cases(.), 1, 0)) %>%
   filter(drop_row == 0)
 ```
 
 ```{r}
-fit <- geeglm(substance_is_any_nicotine_lead1 ~ substance_is_any_nicotine + Y, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
+dat_tmp <- dat_logreg %>% 
+  select(participant_id,
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
+         baseline_tobacco_history, has_partner, income_val) %>%
+  unique(.)
+```
+
+```{r}
+dat_tmp_summary <- dat_tmp %>%
+  summarise(m_age = mean(age),
+            m_is_male = mean(is_male),
+            m_is_latino = mean(is_latino),
+            m_is_not_latino_and_black = mean(is_not_latino_and_black),
+            m_is_not_latino_and_other = mean(is_not_latino_and_other),
+            m_baseline_tobacco_history = mean(baseline_tobacco_history),
+            m_has_partner = mean(has_partner),
+            m_income_val = mean(income_val))
+```
+
+```{r}
+dat_logreg <- cbind(dat_logreg, dat_tmp_summary)
+```
+
+```{r}
+dat_tmp2 <- dat_logreg %>% 
+  select(participant_id, decision_point, substance_is_any_nicotine, any_prompt)
+```
+
+```{r}
+dat_tmp2_summary <- dat_tmp2 %>%
+  group_by(decision_point) %>%
+  summarise(m_any_prompt = mean(any_prompt),
+            m_substance_is_any_nicotine = mean(substance_is_any_nicotine))
+```
+
+```{r}
+dat_logreg <- left_join(x = dat_logreg, y = dat_tmp2_summary, by = join_by(decision_point == decision_point))
+```
+
+```{r}
+dat_logreg <- dat_logreg %>%
+  mutate(c_age = age - m_age,
+         c_is_male = is_male - m_is_male, 
+         c_is_latino = is_latino - m_is_latino, 
+         c_is_not_latino_and_black = is_not_latino_and_black - m_is_not_latino_and_black, 
+         c_is_not_latino_and_other = is_not_latino_and_other - m_is_not_latino_and_other, 
+         c_baseline_tobacco_history = baseline_tobacco_history - m_baseline_tobacco_history, 
+         c_has_partner = has_partner - m_has_partner, 
+         c_income_val = income_val - m_income_val) %>%
+  mutate(c_any_prompt = any_prompt - m_any_prompt) %>%
+  mutate(c_substance_is_any_nicotine = substance_is_any_nicotine - m_substance_is_any_nicotine)
+```
+
+```{r}
+fit <- geeglm(substance_is_any_nicotine_lead1 ~ c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val + c_any_prompt + c_substance_is_any_nicotine + Y, family = "binomial", data = dat_logreg, id = participant_id, waves = decision_point)
 ```
 
 ```{r}
@@ -271,11 +429,14 @@ dat_results_odds_scale %>% round(., 3)
 dat_results_odds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Nicotine-Use", "block_level_odds_scale_lagged.csv"), row.names = TRUE)
 ```
 
-# Time-varying association between engagement in self-regulatory strategies and nicotine use on next person-block
+# Time-varying association between engagement in self-regulatory strategies and nicotine use on current person-block
 
 $$
-\text{logit} Pr\left(\text{ANY NICOTINE USE}_{i} \left(t_{i,j+1} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{ANY NICOTINE USE}_{i} \left(t_{i,j} \right) + \beta_2 \left(t_{i,j}\right) \text{WHETHER ENGAGED} \left(t_{i,j}\right) 
+\text{logit} Pr\left(\text{ANY NICOTINE USE}_{i} \left(t_{i,j+1} \right) = 1\right)= \boldsymbol{Z}_c\boldsymbol{\alpha} + \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{c_ANY PROMPT}_{i} \left(t_{i,j} \right) + \beta_2 \left(t_{i,j}\right) \text{c_ANY NICOTINE USE}_{i} \left(t_{i,j} \right) + \beta_3 \left(t_{i,j}\right) \text{WHETHER ENGAGED} \left(t_{i,j}\right)
 $$
+
+where $\boldsymbol{Z}_c$ denotes centered baseline covariates.
+
 ```{r}
 dat_tvem <- dat_logreg
 ```
@@ -285,10 +446,10 @@ list_collect_metrics <- list()
 
 for(current_num_knots in 1:3){
   model_tvem <- tvem(data=dat_tvem,
-                     formula=substance_is_any_nicotine_lead1 ~ substance_is_any_nicotine + Y,
+                     formula=substance_is_any_nicotine_lead1 ~ c_any_prompt + c_substance_is_any_nicotine + Y,
                      id=participant_id,
                      time=decision_point,
-                     invar_effects=NULL,
+                     invar_effects=~ c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val,
                      family = binomial(),
                      num_knots = current_num_knots,
                      spline_order = 3,
@@ -305,10 +466,10 @@ for(current_num_knots in 1:3){
 dat_all_metrics <- bind_rows(list_collect_metrics)
 
 model_tvem <- tvem(data=dat_tvem,
-                   formula=substance_is_any_nicotine_lead1 ~ substance_is_any_nicotine + Y,
+                   formula=substance_is_any_nicotine_lead1 ~ c_any_prompt + c_substance_is_any_nicotine + Y,
                    id=participant_id,
                    time=decision_point,
-                   invar_effects=NULL,
+                   invar_effects=~ c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val,
                    family = binomial(),
                    num_knots = dat_all_metrics[which.min(dat_all_metrics$bic_value),"total_knots"],
                    spline_order = 3,
@@ -316,9 +477,9 @@ model_tvem <- tvem(data=dat_tvem,
                    penalize = TRUE)
 ```
 
-
 ```{r}
 plot(model_tvem)
+
 plot(model_tvem, exponentiate = TRUE)
 ```
 
@@ -337,14 +498,14 @@ dat_fitted_tvem[["LB90"]] <- model_tvem$grid_fitted_coefficients$Y$estimate - qn
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab(expression(widehat(beta)[NU][paste(",")][2]*"(j)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.6))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Nicotine-Use", "tvem_block_level_logodds_scale_lagged_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab(expression(widehat(beta)[NU][paste(",")][2]*"(j)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.6))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + xlim(7,54) + xlab("Decision Point j") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Nicotine-Use", "tvem_block_level_logodds_scale_lagged_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
@@ -364,24 +525,20 @@ dat_fitted_tvem_exp_scale[["LB90"]] <- exp(dat_fitted_tvem[["LB90"]])
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab(expression("exp("*widehat(beta)[NU][paste(",")][2]*"(j))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 2))
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab("") + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(0, 2))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Nicotine-Use", "tvem_block_level_odds_scale_lagged_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab(expression("exp("*widehat(beta)[NU][paste(",")][2]*"(j))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 2))
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + xlim(7,54) + xlab("Decision Point j") + ylab("") + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(0, 2))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Nicotine-Use", "tvem_block_level_odds_scale_lagged_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
-
-
-
-
-
-
-
-
-
+```{r}
+if(file.exists("analysis-complete-case/formatted-output/Exploratory-Analysis-Associational-Nicotine-Use/Thumbs.db")){
+  file.remove("analysis-complete-case/formatted-output/Exploratory-Analysis-Associational-Nicotine-Use/Thumbs.db")
+}
+```
