--- a/analysis-complete-case/exploratory-analysis-day-level-cigarette-use.Rmd
+++ b/analysis-complete-case/exploratory-analysis-day-level-cigarette-use.Rmd
@@ -63,17 +63,15 @@ dat_baseline <- dat_primary_aim %>% filter(decision_point == 1) %>% select(parti
 dat_for_analysis <- dat_primary_aim %>%
   select(participant_id, cluster_id, decision_point,
          Y, cigarette_counts, eligibility, coinflip, is_high_effort, is_low_effort) %>%
-  mutate(coinflip = replace(coinflip, eligibility == 0, 0),
-         is_high_effort = replace(is_high_effort, eligibility == 0, 0)) %>%
+  mutate(coinflip = replace(coinflip, eligibility == 0, 0)) %>%
   group_by(participant_id, cluster_id) %>%
   summarise(n_elig = sum(eligibility),
             n_any_prompt = sum(coinflip),
-            n_high_effort_prompt = sum(is_high_effort),
-            n_low_effort_prompt = sum(is_low_effort),
             n_obs_engaged = sum(!is.na(Y)),
             n_obs_nic = sum(!is.na(cigarette_counts)),
             n_engaged = sum(Y, na.rm = TRUE),
-            n_nic = sum(cigarette_counts, na.rm = TRUE))
+            n_nic = sum(cigarette_counts, na.rm = TRUE)) %>%
+  ungroup(.)
 ```
 
 ```{r}
@@ -82,11 +80,7 @@ dat_for_analysis <- dat_for_analysis %>%
          n_elig_lag1 = lag(n_elig),
          n_obs_nic_lag1 = lag(n_obs_nic),
          n_engaged_lag1 = lag(n_engaged)) %>%
-  mutate(n_any_prompt_lag1 = lag(n_any_prompt),
-         n_high_effort_prompt_lag1 = lag(n_high_effort_prompt),
-         n_low_effort_prompt_lag1 = lag(n_low_effort_prompt)) %>%
-  mutate(n_engaged_lag1_by_n_any_prompt = n_engaged_lag1 * n_any_prompt,
-         n_engaged_lag1_by_n_high_effort_prompt = n_engaged_lag1 * n_high_effort_prompt) %>%
+  mutate(n_any_prompt_lag1 = lag(n_any_prompt)) %>%
   mutate(n_obs_nic_lead1 = lead(n_obs_nic),
          n_nic_lead1 = lead(n_nic),
          n_elig_lead1 = lead(n_elig)) %>%
@@ -104,21 +98,78 @@ dat_for_analysis <- dat_for_analysis %>% mutate(cluster_id = cluster_id - 1) # S
 dat_for_analysis <- left_join(x = dat_for_analysis, y = dat_baseline, by = join_by(participant_id == participant_id))
 ```
 
-# Marginal association between engagement in self-regulatory strategies and cigarette use on current day
+# Association between engagement in self-regulatory strategies and cigarette use on current day
 
 $$
-\mathrm{logit} Pr \left( S_{i,d} = 1 \Bigg| \sum_{b = 1}^6 I_{i, d, b} \geq 1 \right) = \beta_0 + \beta_1 X_{i,d}
+\mathrm{logit} Pr \left( \text{ANY CIGARETTE USE}_{i,d} = 1 \Bigg| \sum_{b = 1}^6 I_{i, d, b} \geq 1, \text{control covariates}, \text{NO. OF TIMES ENGAGED}_{i,d} \right) = \beta_0 + \text{c_age}\beta_1 + \text{c_is_male}\beta_2 + \text{c_is_latino}\beta_3 + \text{c_is_not_latino_and_black}\beta_4 + \text{c_is_not_latino_and_other}\beta_5 + \text{c_baseline_tobacco_history}\beta_6 + \text{c_has_partner}\beta_7 + \text{c_income_val}\beta_8 + \text{c_any_prompt_counts}_{i,d}\beta_9 + \text{NO. TIMES ENGAGED}_{i,d} \beta_{10}
 $$
 
 ```{r}
 dat_logreg <- dat_for_analysis %>% 
-  filter(n_elig > 0) %>% 
-  mutate(drop_row = if_else(n_elig != n_obs_nic, 1, 0)) %>%
+  filter(n_elig > 0) %>%
+  filter(n_elig == n_obs_nic) %>%
+  select(participant_id, cluster_id, 
+         n_elig, n_obs_nic, n_any_prompt,
+         n_nic, any_nic, n_engaged,
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
+         baseline_tobacco_history, has_partner, income_val) %>%
+  mutate(drop_row = if_else(!complete.cases(.), 1, 0)) %>%
   filter(drop_row == 0)
 ```
 
 ```{r}
-fit <- geeglm(any_nic ~ n_engaged, 
+dat_tmp <- dat_logreg %>% 
+  select(participant_id,
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
+         baseline_tobacco_history, has_partner, income_val) %>%
+  unique(.)
+```
+
+```{r}
+dat_tmp_summary <- dat_tmp %>%
+  summarise(m_age = mean(age),
+            m_is_male = mean(is_male),
+            m_is_latino = mean(is_latino),
+            m_is_not_latino_and_black = mean(is_not_latino_and_black),
+            m_is_not_latino_and_other = mean(is_not_latino_and_other),
+            m_baseline_tobacco_history = mean(baseline_tobacco_history),
+            m_has_partner = mean(has_partner),
+            m_income_val = mean(income_val))
+```
+
+```{r}
+dat_logreg <- cbind(dat_logreg, dat_tmp_summary)
+```
+
+```{r}
+dat_tmp2 <- dat_logreg %>% select(participant_id, cluster_id, n_any_prompt)
+```
+
+```{r}
+dat_tmp2_summary <- dat_tmp2 %>%
+  group_by(cluster_id) %>%
+  summarise(m_any_prompt_counts = mean(n_any_prompt))
+```
+
+```{r}
+dat_logreg <- left_join(x = dat_logreg, y = dat_tmp2_summary, by = join_by(cluster_id == cluster_id))
+```
+
+```{r}
+dat_logreg <- dat_logreg %>%
+  mutate(c_age = age - m_age,
+         c_is_male = is_male - m_is_male, 
+         c_is_latino = is_latino - m_is_latino, 
+         c_is_not_latino_and_black = is_not_latino_and_black - m_is_not_latino_and_black, 
+         c_is_not_latino_and_other = is_not_latino_and_other - m_is_not_latino_and_other, 
+         c_baseline_tobacco_history = baseline_tobacco_history - m_baseline_tobacco_history, 
+         c_has_partner = has_partner - m_has_partner, 
+         c_income_val = income_val - m_income_val) %>%
+  mutate(c_any_prompt_counts = n_any_prompt - m_any_prompt_counts)
+```
+
+```{r}
+fit <- geeglm(any_nic ~ c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val + c_any_prompt_counts + n_engaged, 
               family = "binomial", 
               data = dat_logreg, 
               id = participant_id, 
@@ -160,19 +211,13 @@ dat_results_odds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(.
 ```
 
 $$
-E \left( S_{i,d} \Bigg| \sum_{b = 1}^6 I_{i, d, b} \geq 1 \right) = \beta_0 + \beta_1 X_{i,d}
+E \left( \text{NO. CIGARETTES SMOKED}_{i,d} \Bigg| \sum_{b = 1}^6 I_{i, d, b} \geq 1, \text{control covariates}, \text{NO. OF TIMES ENGAGED}_{i,d} \right) = \beta_0 + \text{c_age}\beta_1 + \text{c_is_male}\beta_2 + \text{c_is_latino}\beta_3 + \text{c_is_not_latino_and_black}\beta_4 + \text{c_is_not_latino_and_other}\beta_5 + \text{c_baseline_tobacco_history}\beta_6 + \text{c_has_partner}\beta_7 + \text{c_income_val}\beta_8 + \text{c_any_prompt_counts}_{i,d}\beta_9 + \text{NO. TIMES ENGAGED}_{i,d} \beta_{10}
 $$
 
-```{r}
-dat_reg <- dat_for_analysis %>% 
-  filter(n_elig > 0) %>% 
-  mutate(drop_row = if_else(n_elig != n_obs_nic, 1, 0)) %>%
-  filter(drop_row == 0)
-```
 
 ```{r}
-fit <- geeglm(n_nic ~ n_engaged, 
-              data = dat_reg, 
+fit <- geeglm(n_nic ~ c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val + c_any_prompt_counts + n_engaged, 
+              data = dat_logreg, 
               id = participant_id, 
               waves = cluster_id)
 ```
@@ -194,12 +239,52 @@ dat_results_mean_scale %>% round(., 3)
 dat_results_mean_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "day_level_mean_scale_concurrent.csv"), row.names = TRUE)
 ```
 
+```{r}
+mu <- mean(dat_logreg$n_engaged)
+std_dev <- sd(dat_logreg$n_engaged)
+mu_plus_1sd <- mu + std_dev
+mu_minus_1sd <- mu - std_dev
+
+data.frame(mu = mu, std_dev = std_dev)
+
+est_beta <- as.matrix(dat_results$Estimate)
+Lmat <- rbind(c(1, rep(0,9), mu),
+              c(1, rep(0,9), mu_plus_1sd),
+              c(1, rep(0,9), mu_minus_1sd))
+Vmat <- vcov(fit)
+
+est_rate <- Lmat %*% est_beta
+std_err_rate <- sqrt(diag(Lmat %*% Vmat %*% t(Lmat)))
+
+LB95_rate <- est_rate - qnorm(0.975)*std_err_rate
+UB95_rate <- est_rate + qnorm(0.975)*std_err_rate
+
+LB90_rate <- est_rate - qnorm(0.95)*std_err_rate
+UB90_rate <- est_rate + qnorm(0.95)*std_err_rate
+
+dat_results_rate <- data.frame(estimate = est_rate,
+                               # 95% CI
+                               LB95 = LB95_rate, 
+                               UB95 = UB95_rate,
+                               # 90% CI
+                               LB90 = LB90_rate, 
+                               UB90 = UB90_rate)
+
+row.names(dat_results_rate) <- c("rate at the mean of control covariates when mu", "rate at the mean of control covariates when mu+1*sd", "rate at the mean of control covariates when mu-1*sd")
+
+dat_results_rate  %>% round(., 3)
+
+# Format output to 3 decimal places
+dat_results_rate %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "day_level_rate_concurrent.csv"), row.names = TRUE)
+```
 
 # Time-varying association between engagement in self-regulatory strategies and cigarette use on current day
 
 $$
-\text{logit} Pr\left(\text{ANY CIGARETTE USE}_{i} \left(t_{i,j} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{NO. OF TIMES ENGAGED} \left(t_{i,j}\right)
+\text{logit} Pr\left(\text{ANY CIGARETTE USE}_{i} \left(t_{i,d} \right) = 1\right) = \boldsymbol{Z}_c\boldsymbol{\alpha} + \beta_0 \left(t_{i,d}\right) + \text{c_any_prompt_counts}\left(t_{i,d}\right) \beta_1 \left(t_{i,d}\right)  + \text{NO. OF TIMES ENGAGED} \left(t_{i,d}\right) \beta_2 \left(t_{i,d}\right) 
 $$
+
+where $\boldsymbol{Z}_c$ denotes centered baseline covariates.
 
 ```{r}
 dat_tvem <- dat_logreg
@@ -210,10 +295,10 @@ list_collect_metrics <- list()
 
 for(current_num_knots in 1:3){
   model_tvem <- tvem(data=dat_tvem,
-                     formula=any_nic ~ n_engaged,
+                     formula=any_nic ~ c_any_prompt_counts + n_engaged,
                      id=participant_id,
                      time=cluster_id,
-                     invar_effects=NULL,
+                     invar_effects=~c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val,
                      family = binomial(),
                      num_knots = current_num_knots,
                      spline_order = 3,
@@ -230,10 +315,10 @@ for(current_num_knots in 1:3){
 dat_all_metrics <- bind_rows(list_collect_metrics)
 
 model_tvem <- tvem(data=dat_tvem,
-                   formula=any_nic ~ n_engaged,
+                   formula=any_nic ~ c_any_prompt_counts + n_engaged,
                    id=participant_id,
                    time=cluster_id,
-                   invar_effects=NULL,
+                   invar_effects=~c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val,
                    family = binomial(),
                    num_knots = dat_all_metrics[which.min(dat_all_metrics$bic_value),"total_knots"],
                    spline_order = 3,
@@ -262,14 +347,14 @@ dat_fitted_tvem[["LB90"]] <- model_tvem$grid_fitted_coefficients$n_engaged$estim
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression(widehat(beta)[CU][paste(",")][1]*"(d)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.6))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_logodds_scale_concurrent_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression(widehat(beta)[CU][paste(",")][1]*"(d)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.6))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_logodds_scale_concurrent_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
@@ -290,24 +375,27 @@ dat_fitted_tvem_exp_scale[["LB90"]] <- exp(dat_fitted_tvem[["LB90"]])
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression("exp("*widehat(beta)[CU][paste(",")][1]*"(d))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 2))
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(0, 2))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_odds_scale_concurrent_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression("exp("*widehat(beta)[CU][paste(",")][1]*"(d))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 2))
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(0, 2))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_odds_scale_concurrent_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 $$
-E\left(\text{NO. OF CIGARETTES SMOKED}_{i} \left(t_{i,j} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{NO. OF TIMES ENGAGED} \left(t_{i,j}\right)
+E\left(\text{NO. OF CIGARETTES SMOKED}_{i} \left(t_{i,j} \right) = 1\right) = \boldsymbol{Z}_c\boldsymbol{\alpha} + \beta_0 \left(t_{i,d}\right) + \text{c_any_prompt_counts}\left(t_{i,d}\right) \beta_1 \left(t_{i,d}\right)  + \text{NO. OF TIMES ENGAGED} \left(t_{i,d}\right) \beta_2 \left(t_{i,d}\right)
 $$
 
+where $\boldsymbol{Z}_c$ denotes centered baseline covariates.
+
+
 ```{r}
-dat_tvem <- dat_reg
+dat_tvem <- dat_logreg
 ```
 
 ```{r}
@@ -315,10 +403,10 @@ list_collect_metrics <- list()
 
 for(current_num_knots in 1:3){
   model_tvem <- tvem(data=dat_tvem,
-                     formula=n_nic ~ n_engaged,
+                     formula=n_nic ~ c_any_prompt_counts + n_engaged,
                      id=participant_id,
                      time=cluster_id,
-                     invar_effects=NULL,
+                     invar_effects=~c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val,
                      num_knots = current_num_knots,
                      spline_order = 3,
                      penalty_function_order = 1,
@@ -334,10 +422,10 @@ for(current_num_knots in 1:3){
 dat_all_metrics <- bind_rows(list_collect_metrics)
 
 model_tvem <- tvem(data=dat_tvem,
-                   formula=n_nic ~ n_engaged,
+                   formula=n_nic ~  c_any_prompt_counts + n_engaged,
                    id=participant_id,
                    time=cluster_id,
-                   invar_effects=NULL,
+                   invar_effects=~c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val,
                    num_knots = dat_all_metrics[which.min(dat_all_metrics$bic_value),"total_knots"],
                    spline_order = 3,
                    penalty_function_order = 1,
@@ -363,34 +451,97 @@ dat_fitted_tvem[["LB90"]] <- model_tvem$grid_fitted_coefficients$n_engaged$estim
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression(widehat(beta)[CU][paste(",")][1]*"(d)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.6))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_mean_scale_concurrent_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression(widehat(beta)[CU][paste(",")][1]*"(d)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.6))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_mean_scale_concurrent_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 
-# Marginal association between engagement in self-regulatory strategies and cigarette use on next day
+# Association between engagement in self-regulatory strategies and cigarette use on next day
 
 $$
-\mathrm{logit} Pr \left( S_{i,d + 1} = 1 \Bigg| \left\{\sum_{b = 1}^6 I_{i,d, b} \geq 1\right\} \cap \left\{\sum_{b = 1}^6 I_{i,d+1, b} \geq 1\right\} \right) = \beta_0 + \beta_1 S_{i,d} + \beta_2 X_{i,d}
+\mathrm{logit} Pr \left( \text{ANY CIGARETTE USE}_{i,d + 1} = 1 \Bigg| \left\{\sum_{b = 1}^6 I_{i,d, b} \geq 1\right\} \cap \left\{\sum_{b = 1}^6 I_{i,d+1, b} \geq 1\right\} , \text{control covariates}, \text{NO. OF TIMES ENGAGED}_{i,d} \right) = \beta_0 + \text{c_age}\beta_1 + \text{c_is_male}\beta_2 + \text{c_is_latino}\beta_3 + \text{c_is_not_latino_and_black}\beta_4 + \text{c_is_not_latino_and_other}\beta_5 + \text{c_baseline_tobacco_history}\beta_6 + \text{c_has_partner}\beta_7 + \text{c_income_val}\beta_8 + \text{c_any_prompt_counts}_{i,d}\beta_9 + \text{ANY CIGARETTE USE}_{i,d}\beta_{10} + \text{NO. TIMES ENGAGED}_{i,d} \beta_{11}
 $$
 
 ```{r}
 dat_logreg <- dat_for_analysis %>% 
-  filter((n_elig > 0) & (n_elig_lead1 > 0)) %>% 
-  mutate(drop_row = if_else((n_elig != n_obs_nic) | (n_elig_lead1 != n_obs_nic_lead1), 1, 0)) %>%
+  filter((n_elig > 0) & (n_elig_lead1 > 0)) %>%
+  filter((n_elig == n_obs_nic) & (n_elig_lead1 == n_obs_nic_lead1)) %>%
+  select(participant_id, cluster_id, 
+         n_elig, n_obs_nic, n_any_prompt,
+         n_elig_lead1, n_obs_nic_lead1,
+         n_nic, any_nic, n_engaged,
+         n_nic_lead1, any_nic_lead1,
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
+         baseline_tobacco_history, has_partner, income_val) %>%
+  mutate(drop_row = if_else(!complete.cases(.), 1, 0)) %>%
   filter(drop_row == 0)
 ```
 
 ```{r}
-fit <- geeglm(any_nic_lead1 ~ any_nic + n_engaged, family = "binomial", data = dat_logreg, id = participant_id, waves = cluster_id)
+dat_tmp <- dat_logreg %>% 
+  select(participant_id,
+         age, is_male, is_latino, is_not_latino_and_black, is_not_latino_and_other, 
+         baseline_tobacco_history, has_partner, income_val) %>%
+  unique(.)
+```
+
+```{r}
+dat_tmp_summary <- dat_tmp %>%
+  summarise(m_age = mean(age),
+            m_is_male = mean(is_male),
+            m_is_latino = mean(is_latino),
+            m_is_not_latino_and_black = mean(is_not_latino_and_black),
+            m_is_not_latino_and_other = mean(is_not_latino_and_other),
+            m_baseline_tobacco_history = mean(baseline_tobacco_history),
+            m_has_partner = mean(has_partner),
+            m_income_val = mean(income_val))
+```
+
+```{r}
+dat_logreg <- cbind(dat_logreg, dat_tmp_summary)
+```
+
+```{r}
+dat_tmp2 <- dat_logreg %>% select(participant_id, cluster_id, n_any_prompt, any_nic, n_nic)
+```
+
+```{r}
+dat_tmp2_summary <- dat_tmp2 %>%
+  group_by(cluster_id) %>%
+  summarise(m_any_prompt_counts = mean(n_any_prompt),
+            m_any_nic = mean(any_nic),
+            m_n_nic = mean(n_nic))
+```
+
+```{r}
+dat_logreg <- left_join(x = dat_logreg, y = dat_tmp2_summary, by = join_by(cluster_id == cluster_id))
+```
+
+```{r}
+dat_logreg <- dat_logreg %>%
+  mutate(c_age = age - m_age,
+         c_is_male = is_male - m_is_male, 
+         c_is_latino = is_latino - m_is_latino, 
+         c_is_not_latino_and_black = is_not_latino_and_black - m_is_not_latino_and_black, 
+         c_is_not_latino_and_other = is_not_latino_and_other - m_is_not_latino_and_other, 
+         c_baseline_tobacco_history = baseline_tobacco_history - m_baseline_tobacco_history, 
+         c_has_partner = has_partner - m_has_partner, 
+         c_income_val = income_val - m_income_val) %>%
+  mutate(c_any_prompt_counts = n_any_prompt - m_any_prompt_counts,
+         c_any_nic = any_nic - m_any_nic,
+         c_n_nic = n_nic - m_n_nic)
+```
+
+```{r}
+fit <- geeglm(any_nic_lead1 ~ c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val + c_any_prompt_counts + c_any_nic + n_engaged, family = "binomial", data = dat_logreg, id = participant_id, waves = cluster_id)
 ```
 
 ```{r}
@@ -427,18 +578,11 @@ dat_results_odds_scale %>% round(., 3) %>% format(., nsmall = 3) %>% write.csv(.
 ```
 
 $$
-E \left( S_{i,d + 1} \Bigg| \left\{\sum_{b = 1}^6 I_{i,d, b} \geq 1\right\} \cap \left\{\sum_{b = 1}^6 I_{i,d+1, b} \geq 1\right\} \right) = \beta_0 + \beta_1 S_{i,d} + \beta_2 X_{i,d}
+E \left( \text{NO. CIGARETTES SMOKED}_{i,d+1} \Bigg| \sum_{b = 1}^6 I_{i, d, b} \geq 1, \text{control covariates}, \text{NO. OF TIMES ENGAGED}_{i,d} \right) = \beta_0 + \text{c_age}\beta_1 + \text{c_is_male}\beta_2 + \text{c_is_latino}\beta_3 + \text{c_is_not_latino_and_black}\beta_4 + \text{c_is_not_latino_and_other}\beta_5 + \text{c_baseline_tobacco_history}\beta_6 + \text{c_has_partner}\beta_7 + \text{c_income_val}\beta_8 + \text{c_any_prompt_counts}_{i,d}\beta_9 + \text{c_NO. CIGARETTES SMOKED}\beta_{10} + \text{NO. TIMES ENGAGED}_{i,d} \beta_{11}
 $$
 
 ```{r}
-dat_reg <- dat_for_analysis %>% 
-  filter((n_elig > 0) & (n_elig_lead1 > 0)) %>% 
-  mutate(drop_row = if_else((n_elig != n_obs_nic) | (n_elig_lead1 != n_obs_nic_lead1), 1, 0)) %>%
-  filter(drop_row == 0)
-```
-
-```{r}
-fit <- geeglm(any_nic_lead1 ~ any_nic + n_engaged, data = dat_reg, id = participant_id, waves = cluster_id)
+fit <- geeglm(n_nic_lead1 ~ c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val + c_any_prompt_counts + c_n_nic + n_engaged, data = dat_logreg, id = participant_id, waves = cluster_id)
 ```
 
 ```{r}
@@ -464,8 +608,10 @@ dat_tvem <- dat_logreg
 ```
 
 $$
-\text{logit} Pr\left(\text{ANY CIGARETTE USE}_{i} \left(t_{i,j+1} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{ANY CIGARETTE USE}_{i} \left(t_{i,j}\right) + \beta_2 \left(t_{i,j}\right) \text{NO. OF TIMES ENGAGED} \left(t_{i,j}\right)
+\text{logit} Pr\left(\text{ANY CIGARETTE USE}_{i} \left(t_{i,d+1} \right) = 1\right)= \boldsymbol{Z}_c\boldsymbol{\alpha} + \beta_0 \left(t_{i,d}\right) + \beta_1 \left(t_{i,d}\right) \text{c_ANY PROMPT}_{i} \left(t_{i,d} \right) + \beta_2 \left(t_{i,d}\right) \text{c_ANY CIGARETTE USE}_{i} \left(t_{i,d} \right) + \beta_3 \left(t_{i,d}\right) \text{WHETHER ENGAGED} \left(t_{i,d}\right)
 $$
+
+where $\boldsymbol{Z}_c$ denotes centered baseline covariates.
 
 
 ```{r}
@@ -473,10 +619,10 @@ list_collect_metrics <- list()
 
 for(current_num_knots in 1:3){
   model_tvem <- tvem(data=dat_tvem,
-                     formula=any_nic_lead1 ~ any_nic + n_engaged,
+                     formula=any_nic_lead1 ~ c_any_nic + n_engaged,
                      id=participant_id,
                      time=cluster_id,
-                     invar_effects=NULL,
+                     invar_effects=~c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val + c_any_prompt_counts,
                      family = binomial(),
                      num_knots = current_num_knots,
                      spline_order = 3,
@@ -493,10 +639,10 @@ for(current_num_knots in 1:3){
 dat_all_metrics <- bind_rows(list_collect_metrics)
 
 model_tvem <- tvem(data=dat_tvem,
-                   formula=any_nic_lead1 ~ any_nic + n_engaged,
+                   formula=any_nic_lead1 ~ c_any_nic + n_engaged,
                    id=participant_id,
                    time=cluster_id,
-                   invar_effects=NULL,
+                   invar_effects=~c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val + c_any_prompt_counts,
                    family = binomial(),
                    num_knots = dat_all_metrics[which.min(dat_all_metrics$bic_value),"total_knots"],
                    spline_order = 3,
@@ -525,14 +671,14 @@ dat_fitted_tvem[["LB90"]] <- model_tvem$grid_fitted_coefficients$n_engaged$estim
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression(widehat(beta)[CU][paste(",")][2]*"(d)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.5))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_logodds_scale_lagged_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression(widehat(beta)[CU][paste(",")][2]*"(d)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.5))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_logodds_scale_lagged_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
@@ -553,36 +699,36 @@ dat_fitted_tvem_exp_scale[["LB90"]] <- exp(dat_fitted_tvem[["LB90"]])
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression("exp("*widehat(beta)[CU][paste(",")][2]*"(d))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 2))
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(0, 2))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_odds_scale_lagged_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression("exp("*widehat(beta)[CU][paste(",")][2]*"(d))")) + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 1") + scale_y_continuous(limits = c(0.5, 2))
+ggplot(dat_fitted_tvem_exp_scale, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.3, linetype = 2, linewidth = 2, color = "black", fill = "thistle3") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 1, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(0, 2))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_odds_scale_lagged_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 ```{r}
-dat_tvem <- dat_reg
+dat_tvem <- dat_logreg
 ```
 
 $$
-E\left(\text{NO. OF CIGARETTES SMOKED}_{i} \left(t_{i,j+1} \right) = 1\right)= \beta_0 \left(t_{i,j}\right) + \beta_1 \left(t_{i,j}\right) \text{ANY CIGARETTE USE}_{i} \left(t_{i,j}\right) + \beta_2 \left(t_{i,j}\right) \text{NO. OF TIMES ENGAGED} \left(t_{i,j}\right)
+E\left(\text{NO. OF CIGARETTES SMOKED}_{i} \left(t_{i,j+1} \right) = 1\right) = = 1\right)= \boldsymbol{Z}_c\boldsymbol{\alpha} + \beta_0 \left(t_{i,d}\right) + \beta_1 \left(t_{i,d}\right) \text{c_ANY PROMPT}_{i} \left(t_{i,d} \right) + \beta_2 \left(t_{i,d}\right) \text{c_NO. OF CIGARETTES SMOKED}_{i} \left(t_{i,d} \right) + \beta_3 \left(t_{i,d}\right) \text{WHETHER ENGAGED} \left(t_{i,d}\right)
 $$
-
+where $\boldsymbol{Z}_c$ denotes centered baseline covariates.
 
 ```{r}
 list_collect_metrics <- list()
 
 for(current_num_knots in 1:3){
   model_tvem <- tvem(data=dat_tvem,
-                     formula=any_nic_lead1 ~ any_nic + n_engaged,
+                     formula=n_nic_lead1 ~ c_any_prompt_counts + c_n_nic + n_engaged,
                      id=participant_id,
                      time=cluster_id,
-                     invar_effects=NULL,
+                     invar_effects=~c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val,
                      num_knots = current_num_knots,
                      spline_order = 3,
                      penalty_function_order = 1,
@@ -598,10 +744,10 @@ for(current_num_knots in 1:3){
 dat_all_metrics <- bind_rows(list_collect_metrics)
 
 model_tvem <- tvem(data=dat_tvem,
-                   formula=any_nic_lead1 ~ any_nic + n_engaged,
+                   formula=any_nic_lead1 ~ c_any_prompt_counts + c_n_nic + n_engaged,
                    id=participant_id,
                    time=cluster_id,
-                   invar_effects=NULL,
+                   invar_effects=~c_age + c_is_male + c_is_latino + c_is_not_latino_and_black + c_is_not_latino_and_other + c_baseline_tobacco_history + c_has_partner + c_income_val,
                    num_knots = dat_all_metrics[which.min(dat_all_metrics$bic_value),"total_knots"],
                    spline_order = 3,
                    penalty_function_order = 1,
@@ -627,15 +773,21 @@ dat_fitted_tvem[["LB90"]] <- model_tvem$grid_fitted_coefficients$n_engaged$estim
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression(widehat(beta)[CU][paste(",")][2]*"(d)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 95% CI, Red dotted line depicts where estimate and 95% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.6))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB95, ymax = UB95), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_mean_scale_lagged_CI95.png"), dpi = 1000, units = "in", height = 7, width = 12)
 ```
 
 ```{r}
 # Create ggplot version of plot
-ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab(expression(widehat(beta)[CU][paste(",")][2]*"(d)")) + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("Black solid line: Estimate, Black dashed lines: 90% CI, Red dotted line depicts where estimate and 90% CI are in relation to 0") + scale_y_continuous(limits = c(-1, 0.6))
+ggplot(dat_fitted_tvem, aes(time_grid, estimate)) + geom_line(linewidth = 2) + geom_ribbon(aes(ymin = LB90, ymax = UB90), alpha = 0.2, linetype = 2, linewidth = 2, color = "black", fill = "aquamarine4") + scale_x_continuous(limits = c(1,8), breaks = seq(1,8,1)) + xlab("Day in MRT d") + ylab("") + geom_hline(yintercept = 0, color = "red", linewidth = 2, linetype = "dotted") + ggtitle("") + scale_y_continuous(limits = c(-1.5, 1))
 
 ggsave(filename = file.path("analysis-complete-case", "formatted-output", "Exploratory-Analysis-Associational-Cigarette-Use", "tvem_day_level_mean_scale_lagged_CI90.png"), dpi = 1000, units = "in", height = 7, width = 12)
+```
+
+```{r}
+if(file.exists("analysis-complete-case/formatted-output/Exploratory-Analysis-Associational-Cigarette-Use/Thumbs.db")){
+  file.remove("analysis-complete-case/formatted-output/Exploratory-Analysis-Associational-Cigarette-Use/Thumbs.db")
+}
 ```
 
